--- a/Interface/creation.ui
+++ b/Interface/creation.ui
@@ -68,7 +68,7 @@
     </rect>
    </property>
    <property name="title">
-    <string>Choose watermark file</string>
+    <string>Choose signature file</string>
    </property>
    <widget class="QLineEdit" name="pathMark">
     <property name="enabled">
