--- a/Interface/validation.ui
+++ b/Interface/validation.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="title">
-    <string>Choose authentic watermark</string>
+    <string>Choose authentic signature</string>
    </property>
    <widget class="QLineEdit" name="pathMark_2">
     <property name="enabled">
